# quantum_basis

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  qbasis.h  qbasisConfig.cmake.in  qbasisConfigVersion.cmake.in
.github/workflows/: c-cpp.yml
cmake_modules/: FindARPACK.cmake  FindCPPTOML.cmake  FindMKL.cmake
docs/: Doxyfile  index.html  mainpage.md
docs/html/: annotated.html  annotated_dup.js  classcpptoml_1_1array-members.html  classcpptoml_1_1array.html  classcpptoml_1_1array.js  classcpptoml_1_1array__coll__graph.map  classcpptoml_1_1array__coll__graph.md5  classcpptoml_1_1array__exception-members.html  classcpptoml_1_1array__exception.html  classcpptoml_1_1array__exception__coll__graph.map  classcpptoml_1_1array__exception__inherit__graph.md5  classcpptoml_1_1base-members.html  classcpptoml_1_1base.html  classcpptoml_1_1base.js  classcpptoml_1_1base__coll__graph.map  classcpptoml_1_1base__coll__graph.md5  classcpptoml_1_1base__inherit__graph.map  classcpptoml_1_1base__inherit__graph.md5  classcpptoml_1_1consumer-members.html  classcpptoml_1_1consumer.html  classcpptoml_1_1fill__guard-members.html  classcpptoml_1_1fill__guard.html  classcpptoml_1_1option-members.html  classcpptoml_1_1option.html  classcpptoml_1_1parse__exception-members.html  classcpptoml_1_1parse__exception.html  classcpptoml_1_1parse__exception__coll__graph.map  classcpptoml_1_1parse__exception__inherit__graph.md5  classcpptoml_1_1parser-members.html  classcpptoml_1_1parser.html  classcpptoml_1_1parser.js  classcpptoml_1_1table-members.html  classcpptoml_1_1table.html  classcpptoml_1_1table.js  classcpptoml_1_1table__array-members.html  classcpptoml_1_1table__array.html  classcpptoml_1_1table__array.js  classcpptoml_1_1table__array__coll__graph.map  classcpptoml_1_1table__array__inherit__graph.md5  classcpptoml_1_1table__coll__graph.map  (+226 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  (+51 more)
docs/latex/: annotated.tex  classqbasis_1_1basis__prop.tex  classqbasis_1_1csr__mat.tex  classqbasis_1_1lattice.tex  classqbasis_1_1lil__mat.tex  classqbasis_1_1mbasis__elem.tex  classqbasis_1_1model.tex  classqbasis_1_1mopr.tex  classqbasis_1_1multi__array.tex  classqbasis_1_1opr.tex  classqbasis_1_1opr__prod.tex  classqbasis_1_1wavefunction.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  structqbasis_1_1extra__info.tex  structqbasis_1_1lil__mat__elem.tex
examples/: readme.txt
examples/no_sym/: Bose_Hubbard_square.cc  Fermi_Hubbard_square.cc  Heisenberg_spin_half_chain.cc  Heisenberg_spin_half_kagome.cc  Heisenberg_spin_half_triangular.cc  Heisenberg_spin_one_chain.cc  Hubbard_square.cc  Kondo_chain.cc  Makefile  Makefile_bridge_gcc_ILP64  Makefile_linux_gcc  Makefile_linux_intel  Makefile_newton_gcc_ILP64  Spinless_Fermion_honeycomb.cc  plot_Fermi_Hubbard_sqw.py  tJ_chain.cc  tJ_kagome.cc
examples/trans_absent/: object_list.txt  playground.cc
examples/trans_symmetric/: object_list.txt
examples/translation_sym/: Fermi_Hubbard_square.cc  Heisenberg_spin_half_chain.cc  Heisenberg_spin_half_triangular.cc  Hubbard_square.cc  Kondo_chain.cc  Makefile  Makefile_linux_gcc  Makefile_newton_gcc_ILP64
html/: classqbasis_1_1basis__prop.html  classqbasis_1_1csr__mat.html  classqbasis_1_1lattice-members.html  classqbasis_1_1lattice.html  classqbasis_1_1lil__mat-members.html  classqbasis_1_1lil__mat.html  classqbasis_1_1mbasis__elem.html  classqbasis_1_1model.html  classqbasis_1_1mopr.html  classqbasis_1_1multi__array-members.html  classqbasis_1_1multi__array.html  classqbasis_1_1opr.html  classqbasis_1_1opr__prod-members.html  classqbasis_1_1opr__prod.html  classqbasis_1_1wavefunction.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html  md__r_e_a_d_m_e.html  pages.html  qbasis_8h_source.html  structqbasis_1_1extra__info-members.html  structqbasis_1_1extra__info.html  structqbasis_1_1lil__mat__elem.html
html/search/: all_0.js  all_2.js  all_6.js  classes_1.js  classes_3.js  pages_0.js
latex/: classqbasis_1_1basis__prop.tex  classqbasis_1_1csr__mat.tex  classqbasis_1_1lattice.tex  classqbasis_1_1lil__mat.tex  classqbasis_1_1mbasis__elem.tex  classqbasis_1_1model.tex  classqbasis_1_1mopr.tex  classqbasis_1_1multi__array.tex  classqbasis_1_1opr.tex  classqbasis_1_1opr__prod.tex  classqbasis_1_1wavefunction.tex  md__r_e_a_d_m_e.tex  refman.tex  structqbasis_1_1extra__info.tex  structqbasis_1_1lil__mat__elem.tex
latt_special/: honeycomb_24site.toml  triangular_31site.toml  triangular_37site.toml  triangular_3site.toml
python/: gen_TL_shearL.py  lanczos_plot.py  lanczos_plotCG.py  lattice_plot.py  triangular_R3.toml
src/: CMakeLists.txt  Makefile  Makefile_clang  Makefile_debug  Makefile_intel  basis.cc  basis.h  bits.cc  chain_xxz.cc  ckpt.cc  cpptoml.h  dsdrv1.f  graph.cc  graph.h  kpm.cc  lanczos.cc  lanczos.h  lattice.cc  main.cc  main_test.cc  measure.cc  miscellaneous.cc  mkl_interface.h  model.cc  multi_array.cc  multi_array.h  operators.cc  operators.h  qbasis.h  sparse.cc  sparse.h  test.cc  test_basis.cc  test_lanczos.cc  test_lattice.cc  test_model.cc  test_operator.cc  zndrv1.f
src/extra/: test.cc  test_basis.cc  test_lanczos.cc  test_lattice.cc  test_operator.cc
src/makefile_list/: Makefile_acf_gcc_ILP64  Makefile_acf_intel_ILP64  Makefile_bridge_gcc_ILP64  Makefile_bridge_intel_ILP64  Makefile_comet_gcc_ILP64  Makefile_comet_gcc_ILP64_aggressive  Makefile_linux_clang  Makefile_linux_gcc  Makefile_linux_gcc_ilp64  Makefile_linux_intel  Makefile_newton_gcc  Makefile_newton_gcc_ILP64  Makefile_osx_clang  Makefile_osx_gcc  Makefile_osx_gcc_ilp64  Makefile_osx_intel  Makefile_rhea_gcc_ILP64  object_list.txt
src/makefile_list/deprecated/: Makefile_newton_gcc
src/makefile_list/ilp64_NoArpack/: Makefile_linux_gcc_ilp64  Makefile_osx_gcc_ilp64  readme.txt
src/makefile_list/linux/: Makefile_intel
src/makefile_list/old/: Makefile_bridge_intel_ILP64  Makefile_linux_intel  Makefile_osx_clang  Makefile_rhea_gcc_ILP64
(+42 files in other folders)
